--- a/Example/Podfile
+++ b/Example/Podfile
@@ -4,6 +4,7 @@ platform :ios, '9.0'
 
 target 'NexusRefresh_Example' do
   pod 'NexusRefresh', :path => '../'
+  pod 'SnapKit'
 
   target 'NexusRefresh_Tests' do
     inherit! :search_paths
